# flask-test-admin-panel

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  uwsgi.ini
src/client/: __init__.py  __main__.py  arg_parser.py  config.py  menu.py
src/client/error/: __init__.py  bad_json_schema_error.py  bad_status_code_error.py
src/client/io/dialog/: __init__.py  cli_dialog.py
src/client/user/io/storage/: __init__.py  rest_user_storage.py
src/client/util/: __init__.py  cli.py  validate_json.py
src/common/: __init__.py
src/common/io/: __init__.py
src/common/io/dialog/: __init__.py  dialog.py  text_dialog.py
src/common/io/storage/: __init__.py  identifiable.py  storage.py
src/common/user/: __init__.py  admin.py  moderator.py  user.py  user_manager.py
src/common/util/: __init__.py  to_dict_convertible.py  type.py
src/server/: __init__.py  __main__.py  arg_parser.py  config.py  multi_user_manager.py
src/server/blueprint/: api.py  web.py
src/server/io/dialog/: __init__.py  json_dialog.py  web_dialog.py
src/server/io/storage/: __init__.py  pickle_storage.py
src/server/static/css/: 404.css  base.css  button-like.css  form.css  index.css  messages.css  object.css  with-border.css
src/server/static/js/: fetchAndReload.js
src/server/templates/: 404.jinja  base.jinja  form.jinja  index.jinja  messages.jinja  object.jinja  user-404.jinja
src/server/user/io/storage/: __init__.py  postgres_user_storage.py  schema.postgres.sql  schema.sql  sqlite3_user_storage.py
src/server/util/: flask.py
